istio/front-javascript/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-javascript
spec:
  gateways:
  - front-javascript
  - mesh
  hosts:
  - front-javascript
  http:
  - route:
      - destination:
          host: front-javascript
        weight: 100
